did some basic model representation comparisons for Mrinank

--- a/breaking_mistral_RR_qualitatively.ipynb
+++ b/breaking_mistral_RR_qualitatively.ipynb
@@ -4128,7 +4128,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (py3-10)",
+   "display_name": "py3-10",
    "language": "python",
    "name": "py3-10"
   },
