--- a/data_munging.ipynb
+++ b/data_munging.ipynb
@@ -10485,7 +10485,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (py3-10)",
+   "display_name": "py3-10",
    "language": "python",
    "name": "py3-10"
   },
